; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_fold-const.c_comparison_to_compcode.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_fold-const.c_comparison_to_compcode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@COMPCODE_LT = common dso_local global i32 0, align 4
@COMPCODE_EQ = common dso_local global i32 0, align 4
@COMPCODE_LE = common dso_local global i32 0, align 4
@COMPCODE_GT = common dso_local global i32 0, align 4
@COMPCODE_NE = common dso_local global i32 0, align 4
@COMPCODE_GE = common dso_local global i32 0, align 4
@COMPCODE_ORD = common dso_local global i32 0, align 4
@COMPCODE_UNORD = common dso_local global i32 0, align 4
@COMPCODE_UNLT = common dso_local global i32 0, align 4
@COMPCODE_UNEQ = common dso_local global i32 0, align 4
@COMPCODE_UNLE = common dso_local global i32 0, align 4
@COMPCODE_UNGT = common dso_local global i32 0, align 4
@COMPCODE_LTGT = common dso_local global i32 0, align 4
@COMPCODE_UNGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @comparison_to_compcode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @comparison_to_compcode(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %33 [
    i32 136, label %5
    i32 141, label %7
    i32 138, label %9
    i32 139, label %11
    i32 135, label %13
    i32 140, label %15
    i32 134, label %17
    i32 128, label %19
    i32 129, label %21
    i32 133, label %23
    i32 130, label %25
    i32 131, label %27
    i32 137, label %29
    i32 132, label %31
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @COMPCODE_LT, align 4
  store i32 %6, i32* %2, align 4
  br label %35

7:                                                ; preds = %1
  %8 = load i32, i32* @COMPCODE_EQ, align 4
  store i32 %8, i32* %2, align 4
  br label %35

9:                                                ; preds = %1
  %10 = load i32, i32* @COMPCODE_LE, align 4
  store i32 %10, i32* %2, align 4
  br label %35

11:                                               ; preds = %1
  %12 = load i32, i32* @COMPCODE_GT, align 4
  store i32 %12, i32* %2, align 4
  br label %35

13:                                               ; preds = %1
  %14 = load i32, i32* @COMPCODE_NE, align 4
  store i32 %14, i32* %2, align 4
  br label %35

15:                                               ; preds = %1
  %16 = load i32, i32* @COMPCODE_GE, align 4
  store i32 %16, i32* %2, align 4
  br label %35

17:                                               ; preds = %1
  %18 = load i32, i32* @COMPCODE_ORD, align 4
  store i32 %18, i32* %2, align 4
  br label %35

19:                                               ; preds = %1
  %20 = load i32, i32* @COMPCODE_UNORD, align 4
  store i32 %20, i32* %2, align 4
  br label %35

21:                                               ; preds = %1
  %22 = load i32, i32* @COMPCODE_UNLT, align 4
  store i32 %22, i32* %2, align 4
  br label %35

23:                                               ; preds = %1
  %24 = load i32, i32* @COMPCODE_UNEQ, align 4
  store i32 %24, i32* %2, align 4
  br label %35

25:                                               ; preds = %1
  %26 = load i32, i32* @COMPCODE_UNLE, align 4
  store i32 %26, i32* %2, align 4
  br label %35

27:                                               ; preds = %1
  %28 = load i32, i32* @COMPCODE_UNGT, align 4
  store i32 %28, i32* %2, align 4
  br label %35

29:                                               ; preds = %1
  %30 = load i32, i32* @COMPCODE_LTGT, align 4
  store i32 %30, i32* %2, align 4
  br label %35

31:                                               ; preds = %1
  %32 = load i32, i32* @COMPCODE_UNGE, align 4
  store i32 %32, i32* %2, align 4
  br label %35

33:                                               ; preds = %1
  %34 = call i32 (...) @gcc_unreachable()
  br label %35

35:                                               ; preds = %5, %7, %9, %11, %13, %15, %17, %19, %21, %23, %25, %27, %29, %31, %33
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @gcc_unreachable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
